--- a/src/partials/meta.html
+++ b/src/partials/meta.html
@@ -1,5 +1,6 @@
 <meta name="author" content="<!-- @echo META.author -->" />
 <meta name="description" content="<!-- @echo META.description -->" />
+<meta name="description" content="<!-- @echo META.keywords -->" />
 <link rel="canonical" href="<!-- @echo META.url -->" />
 
 <meta property="og:title" content="<!-- @echo META.title -->"/>
