--- a/src/styles/base/horizontal-rule.less
+++ b/src/styles/base/horizontal-rule.less
@@ -8,8 +8,8 @@
         border: 0;
         border-top: @hr-border-width solid @hr-border-color;
         clear: both;
-        height: 0;
-        margin: @spacing-base auto;
+        margin-top: @hr-margin;
+        margin-bottom: @hr-margin;
     }
 
 }
