--- a/src/styles/base/mixins.less
+++ b/src/styles/base/mixins.less
@@ -4,8 +4,11 @@
 
     @import 'mixins/arrows';
     @import 'mixins/aspect-ratio';
-    @import 'mixins/button-size';
+    @import 'mixins/button';
+    @import 'mixins/center';
+    @import 'mixins/center-block';
     @import 'mixins/clearfix';
+    @import 'mixins/cover';
     @import 'mixins/font-face';
     @import 'mixins/font-size';
     @import 'mixins/font-size-fluid';
