--- a/src/styles/base/mixins/font-size-fluid.less
+++ b/src/styles/base/mixins/font-size-fluid.less
@@ -12,8 +12,8 @@
 // }
 
 .font-size-fluid (
-    @min-font-size: @base-font-size,
-    @max-font-size: @base-line-height,
+    @min-font-size: @root-font-size,
+    @max-font-size: @root-font-size * @line-height-base,
     @min-font-range: @breakpoint-sm,
     @max-font-range: @breakpoint-xl) {
 
