--- a/src/styles/base/mixins/input-placeholder.less
+++ b/src/styles/base/mixins/input-placeholder.less
@@ -1,7 +1,8 @@
 //
 // Input-placeholder
 // -------------------------------------------------------
-.input-placeholder(@color: @input-placeholder-color, @hover-color: @input-placeholder-hover-color, @focus-color: @input-placeholder-focus-color) {
+
+.input-placeholder(@color, @hover-color, @focus-color) {
     ::placeholder {
         color: @color;
         transition: color @transition-duration-default @transition-easing-default;
