--- a/src/styles/base/tables.less
+++ b/src/styles/base/tables.less
@@ -4,13 +4,12 @@
 .tables(@boolean) when (@boolean = true) {
 
     table {
-        border-collapse: collapse;
-        border-spacing: 0;
         empty-cells: show;
         word-wrap: break-word; // for CSS3 browsers
         text-align: left;
         max-width: 100%;
         width: 100%;
+        margin: 0 0 @spacing-base 0;
     }
 
 }
