--- a/src/styles/objects/tooltips.less
+++ b/src/styles/objects/tooltips.less
@@ -158,7 +158,7 @@
     .tooltip--multiline {
         &:before {
             white-space: pre-line;
-            line-height: @line-height-ratio;
+            line-height: @line-height-base;
             width: max-content;
             max-width: @tooltip-multiline-width;
             @media @ie9-10 {
