--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -15,7 +15,6 @@
     @import 'base/resets';
     @import	'base/print';
     @import 'base/main';
-    @import 'base/vertical-rhytmn';
     @import 'base/typography';
     @import 'base/horizontal-rule';
     @import 'base/lists';
@@ -26,24 +25,25 @@
     // Objects
     @import 'objects/animate';
     @import 'objects/buttons';
+    @import 'objects/button-group';
     @import 'objects/form-styles';
+    @import 'objects/form-fields';
     @import 'objects/grid';
     @import 'objects/icons';
-    @import 'objects/embed-wrap';
+    @import 'objects/media';
     @import 'objects/nav-responsive';
     @import	'objects/loader';
     @import	'objects/table-styles';
     @import 'objects/tooltips';
 
     // Utilities
-    @import 'utilities/centering';
     @import 'utilities/display';
     @import 'utilities/flex-alignment';
     @import 'utilities/floats';
     @import 'utilities/text-alignment';
     @import 'utilities/text-weight';
     @import 'utilities/text-color';
-    @import 'utilities/tools';
+    @import 'utilities/utility-classes';
     @import 'utilities/visibility';
     @import 'utilities/vertical-align';
     @import 'utilities/widths';
