--- a/src/styles/utilities/display.less
+++ b/src/styles/utilities/display.less
@@ -22,6 +22,10 @@
     .u-table-cell {
         display: table-cell !important
     }
+
+    .u-flex {
+        display: flex !important;
+    }
 }
 
 .use-display(@use-display);
