--- a/src/styles/base/main.less
+++ b/src/styles/base/main.less
@@ -3,17 +3,19 @@
 // -------------------------------------------------------
 .main(@boolean) when (@boolean = true) {
 
-    :root {
-        font-size: @base-font-size; // Default `font-size` for used with `rem` type scales.
+    html {
+        font-size: @root-font-size; // Default `font-size` for used with `rem` type scales.
         height: 100%; // Ensure the <html> element's `height` is at least the viewport height.
+        overflow-y: scroll; // All browsers without overlaying scrollbars
     }
 
     body {
         background-color: @base-background;
         color: @base-color;
         font-family: @base-font-family;
-        font-size: 1rem;
-        line-height: @line-height-ratio;
+        font-size: @base-font-size;
+        line-height: @line-height-base;
+        letter-spacing: @base-letter-spacing;
         min-height: 100%; // Ensure the <body> element's `min-height` is at least the viewport height.
     }
 
