--- a/src/styles/base/mixins/font-size.less
+++ b/src/styles/base/mixins/font-size.less
@@ -12,7 +12,7 @@
 .font-size(@font-size-value) {
 
     // Calculate rem-size
-    @rem-value: (unit(@font-size-value) / @base-font-size * 1rem);
+    @rem-value: (unit(@font-size-value) / @root-font-size * 1rem);
 
     font-size: ~'@{rem-value}';
 }
