--- a/src/styles/base/typography.less
+++ b/src/styles/base/typography.less
@@ -31,11 +31,12 @@
     .h4,
     .h5,
     .h6 {
+        color: @heading-color;
         font-family: @heading-font-family;
         font-weight: @heading-font-weight;
         line-height: @heading-line-height;
         letter-spacing: @heading-letter-spacing;
-        color: @heading-color;
+        margin-bottom: @spacing-base;
         a {
             color: inherit;
         }
@@ -43,100 +44,109 @@
 
     h1,
     .h1 {
-        .modular-scale(3);
+        font-size: @heading1-font-size-small;
+        @media @md-up {
+            font-size: @heading1-font-size;
+        }
     }
 
     h2,
     .h2 {
-        .modular-scale(2);
+        font-size: @heading2-font-size-small;
+        @media @md-up {
+            font-size: @heading2-font-size;
+        }
     }
 
     h3,
     .h3 {
-        .modular-scale(1);
+        font-size: @heading3-font-size-small;
+        @media @md-up {
+            font-size: @heading3-font-size;
+        }
     }
 
     h4,
     .h4 {
-        .modular-scale(.5);
+        font-size: @heading4-font-size-small;
+        @media @md-up {
+            font-size: @heading4-font-size;
+        }
     }
     h5,
     .h5 {
-        .modular-scale(0);
+        font-size: @heading5-font-size-small;
+        @media @md-up {
+            font-size: @heading5-font-size;
+        }
     }
 
     h6,
     .h6 {
-        .modular-scale(-1);
-    }
-
-    @media @md-up {
-        h1,
-        .h1 {
-            .modular-scale(4);
-        }
-
-        h2,
-        .h2 {
-            .modular-scale(3);
-        }
-
-        h3,
-        .h3 {
-            .modular-scale(2);
-        }
-
-        h4,
-        .h4 {
-            .modular-scale(1);
-        }
-
-        h5,
-        .h5 {
-            .modular-scale(0.5);
-        }
-
-        h6,
-        .h6 {
-            .modular-scale(0);
+        font-size: @heading6-font-size-small;
+        @media @md-up {
+            font-size: @heading6-font-size;
         }
     }
 
     // Display headings
 
     .display-1 {
-        font-size: @display1-font-size;
+        font-size: @display1-font-size-small;
         font-weight: @display1-font-weight;
+        @media @md-up {
+            font-size: @display1-font-size;
+        }
     }
 
     .display-2 {
-        font-size: @display2-font-size;
+        font-size: @display2-font-size-small;
         font-weight: @display2-font-weight;
+        @media @md-up {
+            font-size: @display2-font-size;
+        }
     }
 
     .display-3 {
-        font-size: @display3-font-size;
+        font-size: @display3-font-size-small;
         font-weight: @display3-font-weight;
+        @media @md-up {
+            font-size: @display3-font-size;
+        }
     }
 
     .display-4 {
-        font-size: @display4-font-size;
+        font-size: @display4-font-size-small;
         font-weight: @display4-font-weight;
+        @media @md-up {
+            font-size: @display4-font-size;
+        }
+    }
+
+    // Paragraph
+
+    p {
+        margin-bottom: @spacing-base;
     }
 
     // Lead
 
     .lead {
+        color: @lead-color;
         font-size: @lead-font-size;
         font-weight: @lead-font-weight;
+        line-height: @lead-line-height;
     }
 
-    // Emphasis
+    // Small
 
     small,
     .small {
         font-size: @small-font-size;
+        font-weight: normal;
     }
+
+    // Mark
 
     mark,
     .mark {
@@ -146,17 +156,24 @@
 
     // Blockquotes
 
+    blockquote,
+    q {
+        font-style: @blockquote-font-style;
+        quotes: "\201C" "\201D" "\2018" "\2019";
+    }
+
     blockquote {
         font-family: @blockquote-font-family;
         font-size: @blockquote-font-size;
-        font-style: italic;
         padding: @blockquote-padding;
         border-left: @blockquote-border-width solid @blockquote-border-color;
+            margin-bottom: @spacing-base;
         p {
             margin: 0 0 @spacing-half 0;
         }
         cite {
             color: @blockquote-cite-color;
+            display: inline-block;
             font-family: @base-font-family;
             font-size: @blockquote-cite-font-size;
             font-style: normal;
@@ -171,7 +188,6 @@
     code,
     kbd,
     pre {
-        font-family: monospace, serif;
         font-size: @code-font-size;
         border-radius: @code-border-radius;
     }
@@ -198,6 +214,7 @@
         color: @pre-color;
         overflow-x: auto;
         padding: @pre-padding;
+            margin-bottom: @spacing-base;
         code {
             background: transparent;
             border: none;
