--- a/src/styles/objects/icons.less
+++ b/src/styles/objects/icons.less
@@ -1,35 +1,44 @@
-.icons(@boolean) when (@boolean = true) {
+.icons(@boolean) when (@boolean =true) {
 //
 // Icon fonts
 // -------------------------------------------------------
-    @font-face {.font-face('icons', 'icons', normal, normal);}
 
     .icon {
-        font: normal normal normal @icon-font-size/1 'icons';
         display: inline-block;
-        speak: none;
-        text-rendering: auto;
-        text-decoration: inherit;
-        text-transform: none;
-        font-feature-settings: "liga";
-        user-select: none;
-        -webkit-font-smoothing: subpixel-antialiased;
-        -moz-osx-font-smoothing: auto;
-
-        .button & {
-            line-height: inherit;
-        }
+        height: 1em;
+        width: 1em;
+        vertical-align: middle;
+        pointer-events: none;
     }
 
-    .icon--large:before { font-size: (@icon-font-size * 1.5); }
-    .icon--2x:before { font-size: (@icon-font-size * 2); }
-    .icon--3x:before { font-size: (@icon-font-size * 3); }
-    .icon--4x:before { font-size: (@icon-font-size * 4); }
-    .icon--5x:before { font-size: (@icon-font-size * 5); }
+    .icon--align-to-text {
+        position: relative;
+        top: -0.125em;
+    }
 
+    // Icon sizes
 
-    // Insert icon styles here
+    .icon--small {
+        height: @icon-font-size / 1.5;
+        width: @icon-font-size / 1.5;
+    }
+
+    .icon--medium {
+        height: @icon-font-size * 1;
+        width: @icon-font-size * 1;
+    }
+
+    .icon--large {
+        height: @icon-font-size * 2;
+        width: @icon-font-size * 2;
+    }
+
+    .icon--huge {
+        height: @icon-font-size * 3;
+        width: @icon-font-size * 3;
+    }
 
 
 }
+
 .icons(@use-icons);
