--- a/src/styles/objects/animate.less
+++ b/src/styles/objects/animate.less
@@ -3,14 +3,15 @@
 // -------------------------------------------------------
 .animations(@boolean) when (@boolean =true) {
 
-    .is-animated {
+    .is-animated,
+    .is-animated-infinite {
         animation-duration: 1000ms;
         animation-fill-mode: both;
         transform: translateZ(0); // Improve performance on mobile/tablet devices
         will-change: transform, opacity;
     }
 
-    .is-animated--infinite {
+    .is-animated-infinite {
         animation-iteration-count: infinite;
     }
 
