--- a/src/styles/utilities/text-color.less
+++ b/src/styles/utilities/text-color.less
@@ -23,12 +23,8 @@
         color: @color-warning !important;
     }
 
-    .u-color-danger {
-        color: @color-danger !important;
-    }
-
-    .u-color-info {
-        color: @color-info !important;
+    .u-color-error {
+        color: @color-error !important;
     }
 }
 
