--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -28,6 +28,7 @@
     @import 'objects/button-group';
     @import 'objects/form-styles';
     @import 'objects/form-fields';
+    @import 'objects/form-messages';
     @import 'objects/grid';
     @import 'objects/icons';
     @import 'objects/media';
