add table highlight color

--- a/src/styles/objects/table-styles.less
+++ b/src/styles/objects/table-styles.less
@@ -61,6 +61,7 @@
             tbody {
                 tr {
                     &:hover {
+                        color: @table-higlight-color;
                         background: @table-higlight-background;
                     }
                 }
