add .input -control class

--- a/src/styles/objects/form-styles.less
+++ b/src/styles/objects/form-styles.less
@@ -13,6 +13,7 @@
     }
 
     // Basic styles for form elements
+    .input,
     input[type="date"],
     input[type="datetime"],
     input[type="datetime-local"],
