add table highlight color variable

--- a/src/styles/base/variables.less
+++ b/src/styles/base/variables.less
@@ -107,7 +107,7 @@
 // TYPOGRAPHY & BASELINE PROPORTIONS
 // -------------------------------------------------------
 
-// @Font-Face (uncomment to use)
+// @Font-Face (Formats: .ttf, .woff, .woff2)
 // Options: 'font-family', 'font-file-name', font-weight, font-style
 //@font-face {.font-face('Raleway', 'Raleway-Regular', 400, normal);}
 //@font-face {.font-face('Raleway', 'Raleway-Bold', 700, normal);}
@@ -390,6 +390,7 @@
 @table-border-color:            @grey-100;
 @table-stripe-background:       @grey-25;
 @table-higlight-background:     @grey-50;
+@table-higlight-color:          inherit;
 
 
 // TOOLTIPS
